# fallible-alloc

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: cd.yml  ci.yml
src/: alloc_error.rs  lib.rs
src/box_ptr/: mod.rs
src/rc_ptr/: mod.rs
src/util/: alloc.rs  layout.rs  mod.rs
src/vec/: mod.rs
tests/: box_tests.rs  rc_tests.rs  vec_tests.rs  versions.rs
