[package]
name = "fallible_alloc"
version = "0.2.0"
authors = ["zkud <kudirko.anton@gmail.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/zkud/fallible-alloc"
keywords = ["allocation", "fallible", "std", "stable"]
description = "Fallible rust stable std collections allocations"
readme = "README.md"
categories = ["memory-management"]
